# vmpl-apps

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  huge-pages.c  package.sh
bench/: CMakeLists.txt  Makefile.am  README.md
bench/include/: bench.h
bench/src/: bench_dune.c  bench_dune_ipi.c  bench_dune_ring.c  bench_fork_ipi.c  bench_linux.c  bench_self_ipi.c  posted_ipi.c
sandbox/: Makefile.am
sandbox/include/: sandbox.h
sandbox/src/: exec.c  main.c  nullsandbox.c  trap.c  umm.c
syscalls/: CMakeLists.txt  Makefile.am
syscalls/include/: common.h
syscalls/src/: common.c  test_aio.c  test_atexit.c  test_brk.c  test_clone.c  test_cpuid.c  test_crypto.c  test_epoll.c  test_execve.c  test_faults.c  test_file.c  test_fork.c  test_futex.c  test_heap.c  test_hello.c  test_hotcalls.c  test_io_uring.c  test_madvise.c  test_mmap_file.c  test_mmap_pages.c  test_mmap_read.c  test_mprotect.c  test_msg.c  test_msr.c  test_pagemap.c  test_pipe.c  test_popen.c  test_printf.c  test_proc.c  test_procmaps.c  test_recvfrom.c  test_sem.c  test_shm.c  test_signal.c  test_signal1.c  test_socket.c  test_syscall.c  test_thread.c  test_time.c  test_timer.c  (+1 more)
test/: CMakeLists.txt  Makefile.am
test/src/: fork.c  hello.c  hugepages.c  mprotect.c  posted_ipi.c  test.c  test_epoll.c  test_file.c  test_maps.c  test_mprotect.c  test_syscall.c  test_user_mode.c  timetest.c
ufirewall/: Makefile.am
ufirewall/src/: firewall.c
wedge/: Makefile.am
wedge/src/: bench.c  httpd.c  sthread.c
